@@ -1,3 +1,7 @@
+2005/03/25 Morgan Christiansson <drftpd@mog.se>
+* Added ${transfered} for !speed command. Thanks to agne.
+* Small cleanups.
+
 2005/03/13 Matt Zimmerman <zubov@users.sourceforge.net>
 * 2.0RC3 released
 
